--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
     "autoprefixer": "10.4.14",
+    "encoding": "^0.1.13",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "firebase": "^10.1.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
