--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.2"
