--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^1.0.0-beta.13",
     "@react-google-maps/api": "^2.19.2",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.30.0",
     "encoding": "^0.1.13",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
