--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
