--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "eslint-config-next": "13.4.9",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
-    "next": "13.4.9",
+    "next": "^13.4.17",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-big-calendar": "^1.8.2",
-    "react-calendar": "^4.6.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.2"
