--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
-    "@nextui-org/react": "^1.0.0-beta.13",
+    "@nextui-org/react": "^2.1.3",
     "@react-google-maps/api": "^2.19.2",
     "autoprefixer": "10.4.14",
     "date-fns": "^2.30.0",
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.9",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
+    "framer-motion": "^10.16.1",
     "next": "^13.4.17",
     "postcss": "8.4.25",
     "react": "18.2.0",
