--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-big-calendar": "^1.8.2",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.2"
   }
