--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^11.10.1",
     "framer-motion": "^10.16.1",
     "next": "^13.4.17",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-big-calendar": "^1.8.2",
