--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^10.16.1",
     "next": "^13.4.17",
     "next-auth": "^4.23.1",
+    "next-intl": "^2.20.2",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-big-calendar": "^1.8.2",
