--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.2",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.6"
   }
 }
