--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@googlemaps/js-api-loader": "^1.16.2",
     "@nextui-org/react": "^2.1.3",
     "@react-google-maps/api": "^2.19.2",
     "autoprefixer": "10.4.14",
@@ -20,6 +19,7 @@
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "framer-motion": "^10.16.1",
+    "leaflet": "^1.9.4",
     "next": "^13.4.17",
     "next-auth": "^4.23.1",
     "next-intl": "^2.20.2",
@@ -28,6 +28,7 @@
     "react-big-calendar": "^1.8.2",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-leaflet": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.2",
     "uuid": "^9.0.1"
