--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@nextui-org/react": "^2.1.3",
     "@react-google-maps/api": "^2.19.2",
     "autoprefixer": "10.4.14",
