--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.19.2",
     "autoprefixer": "10.4.14",
     "date-fns": "^2.30.0",
+    "emailjs-com": "^3.2.0",
     "encoding": "^0.1.13",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
